--- a/style.css
+++ b/style.css
@@ -85,3 +85,12 @@ section {
     width: 75%;
     border-bottom: 2px solid gray;
 }
+
+ul {
+    list-style-type: disc;
+    list-style-position: inside;
+}
+
+li {
+    margin-left: 15px;
+}
