--- a/style.css
+++ b/style.css
@@ -6,11 +6,13 @@ html, body {
 
 #grid-container {
     display: grid;
-    grid-template-columns: 260px 1fr;
-    grid-template-areas: 
-    "h h"
-    "n m"
-    "f f";
+    grid-template-columns: 260px 3fr;
+    grid-template-areas: "h h" "n m" "f f";
+}
+
+.nav-link:hover {
+    cursor: pointer;
+    background-color: #E5E1Ea;
 }
 
 #h-container {
@@ -42,7 +44,6 @@ html, body {
     width: 260px;
     height: 100%;
     border-right: 2px solid #563D7C;
-
 }
 
 #m-container {
@@ -55,7 +56,17 @@ html, body {
     height: auto;
     padding-left: 50px;
     padding-right: 20px;
-    overflow-y: scroll !important;
+    overflow-y: scroll;
+}
+
+#f-container {
+    grid-area: f;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    background: none;
+    text-align: center;
 }
 
 p {
@@ -93,4 +104,108 @@ ul {
 
 li {
     margin-left: 15px;
+}
+
+/* Social link footer*/
+
+.social-icons {
+    padding: 0;
+    list-style: none;
+}
+
+.social-icons li {
+    display: inline;
+}
+
+.fa-linkedin {
+    padding: 10px 14px;
+    border-radius: 5px;
+    -o-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+}
+
+.fa-linkedin:hover {
+    background-color: #0073a4;
+    color: white;
+}
+
+.fa-github {
+    padding: 10px 14px;
+    border-radius: 5px;
+    -o-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+}
+
+.fa-github:hover {
+    background-color: black;
+    color: white;
+}
+
+.fa-codepen {
+    padding: 10px 14px;
+    border-radius: 5px;
+    -o-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+}
+
+.fa-codepen:hover {
+    background-color: violet;
+    color: white;
+}
+
+/* Tablet || Vertical Layout */
+
+@media (max-width: 768px) {
+    #grid-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-areas: 'h' 'n' 'm' 'f';
+    }
+    #h-container {
+        grid-area: h;
+    }
+    #n-container {
+        grid-area: n;
+        width: 100%;
+        background: whitesmoke;
+        position: fixed;
+        top: 70px;
+        height: 150px;
+        overflow-y: scroll;
+        border: none;
+        border-bottom: 1px solid grey;
+    }
+    #m-container {
+        grid-area: m;
+        margin: 0 auto;
+        width: 100%;
+        position: fixed;
+        padding-left: 5px;
+        padding-right: 5px;
+        left: 0;
+        top: 225px;
+    }
+    .main-section {
+        margin: 0;
+        width: 100%;
+        padding: 0;
+    }
+    #f-container {
+        grid-area: f;
+    }
+}
+
+@media (max-width: 590px) {
+    #h-container h1 {
+        font-size: 1.5em;
+    }
 }
